# MKPE-core-version

./: .gitignore  ACTUAL_BUILD_STATUS.md  AGENTS.md  ARCHITECTURE_LAYERS.md  AUDIT_REPORT_v1.0.0.md  BUILD_COMPLETE_ACTUAL.md  COMPLETE_PROVENANCE_ROADMAP.md  COMPLETE_SYSTEM_READY.md  COMPLETION_REPORT.md  CRASH_REPORTING_ADDED.md  Cargo.toml  DEPLOYMENT_READY_v1.0.0.md  FINAL_BUILD_SUMMARY.md  FINAL_STATUS.md  FREEZE_MANIFEST_v1.0.0.md  INDUSTRY_STANDARD_ANALYSIS.md  INTEGRATION_COMPLETE.md  MASTER_INDEX.md  MKPE_SOTU_OCTOBER_8_2025.md  NEW_FEATURES_GUIDE.md  PROTECTION_PROOF.md  PROVENANCE_IMPROVEMENT_PLAN.md  PROVENANCE_SYSTEM_STATUS.md  README.md  README_USAGE.md  REVIEW_NOTES.md  SECURITY.md  STRATEGIC_VALUE.md  SYSTEM_STATUS.md  UPGRADE_GUIDE.md  UPGRADE_SUCCESS_REPORT.md  VERIFICATION_COMPLETE.md  analyze_crash.ps1  build_attestation.json  canonical_hash.mkpe  canonical_hash.txt  deny.toml  format_spec_v1.0.md  launch_mkpe_complete.ps1  mkpe_config.json  (+7 more)
.cursor/hooks/state/: continual-learning.json
.github/: CODEOWNERS
.github/workflows/: release.yml
assets/icons/: README.md
attestation/: README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: attest_cli_tests.rs  build_attestation.rs  bundle_cli_tests.rs  dna_cli_tests.rs  ownership_cli_tests.rs  verify_attestation.rs
core/: Cargo.toml
core/src/: attestation.rs  audit.rs  bundle.rs  cdna.rs  crypto.rs  dna.rs  dsse.rs  error.rs  format_dna.rs  genesis.rs  lib.rs  manifest.rs  multisig.rs  ownership.rs  policy.rs  proof.rs  provenance.rs  stego.rs  timestamp.rs
core/src/policy_v2/: conditions.rs  mod.rs  registry.rs
core/src/provenance/: cosign_cli.rs  lockfile.rs  producer.rs  signing.rs
core/tests/: attestation_tests.rs  benchmark_tests.rs  determinism_tests.proptest-regressions  determinism_tests.rs  edge_case_tests.rs  encoding_tests.rs  integration_tests.rs  key_migration_tests.rs  malformed_input_tests.rs  policy_v2_integration_tests.rs  replay_tests.rs  upgrade_integration_tests.rs  verification_final_test.rs  verification_invariant_test.rs
docs/: ARCHITECTURE_LAYERS.md  README_USAGE.md  RELEASES.md  SLSA_PLAN.md  VERIFY.md  format_spec_v1.0.md  mkpe_integration.json  v1.1.0-attestation-design.md
docs/security/: KEY_ROTATION.md
examples/: attestation_demo.ps1  test.mkpe  test.txt  test2.mkpe  test2.txt  test_fixed.mkpe  test_fixed.txt
installer/: MKPE_Installer.nsi  MKPE_SystemSetup.iss
legal/: DELAWARE_CORPORATION_SETUP.md
schemas/: README.md  provenance_v1.example.json  provenance_v1.schema.json
scripts/ci/: verify_cosign_dsse_bundle.sh
service/: Cargo.toml
service/src/: main.rs  monitoring.rs
stego/: README.md
supply-chain/: config.toml
test_monitor/: protection_test_20251008_172111.txt  test_171929.txt
tools/: Finalize-MKPE-Build.ps1  Install-MKPE.ps1  Invoke-MKPE.ps1  Run-CompleteAudit.ps1  Update-MKPEManifest.ps1  Verify-MKPEManifest.ps1  build-sbom.ps1
ui/: Cargo.toml  build.rs
ui/src/: main.rs
ui/ui/: appwindow.slint
ui_desktop/: Cargo.toml  build.rs
ui_desktop/src/: crash_handler.rs  encryption.rs  main.rs  secrets_vault.rs
ui_tray/: Cargo.toml  build.rs
ui_tray/src/: main.rs
validation/baseline/: windows_validation.json
vm_testing/: vm_environment_setup.ps1
vm_testing/evidence/: evidence_report.json
vm_testing/evidence/MKPE-CREATIVE-03/: evidence_summary.json  mkpe_service_config.json  system_config.json
vm_testing/evidence/MKPE-ENTERPRISE-04/: evidence_summary.json
vm_testing/evidence/MKPE-MONITORING-05/: evidence_summary.json  system_config.json
vm_testing/evidence/MKPE-TESTING-02/: evidence_summary.json
vm_testing/evidence/MKPE-WORKSTATION-01/: evidence_summary.json  system_config.json
vm_testing/vms/: chaos_config.json  chaos_testing.ps1  collect_evidence.ps1  deploy_mkpe.ps1  monitoring_config.json  network_config.json  system_monitoring.ps1
vm_testing/vms/MKPE-ENTERPRISE-04/: system_config.json
vm_testing/vms/MKPE-TESTING-02/: system_config.json
web_deployment/: DEPLOYMENT_STRATEGY.md  mkpe_landing_page.html
