[package]
name = "mkpe"
	version = "1.2.0-mkpe"
edition = "2021"
authors = ["Morse-Kirby Provenance Engine"]
description = "MKPE command-line tool for signing, verifying, and managing provenance"
license = "Proprietary"
publish = false

[[bin]]
name = "mkpe"
path = "src/main.rs"

[features]
default = ["tpm", "yubikey"]
tpm = ["morse_kirby_core/tpm"]
yubikey = ["morse_kirby_core/yubikey"]

[dependencies]
morse_kirby_core = { path = "../core", default-features = false }

# CLI framework
clap = { version = "4", features = ["derive", "cargo"] }

# Terminal UI
colored = "2"
indicatif = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# File system
walkdir = "2"
glob = "0.3"

# Utilities
chrono = "0.4"
hex = "0.4"
sha2 = "0.10"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
# CLI integration testing. `assert_cmd` runs the binary in a subprocess;
# `predicates` provides matchers; `tempfile` gives us isolated dirs per test.
assert_cmd = "2"
predicates = "3"
tempfile = "3"
