[package]
name = "morse_kirby_core"
version = "1.2.0-mkpe"
edition = "2021"
authors = ["Morse-Kirby Provenance Engine"]
description = "Canonical Morse-Kirby Provenance Engine - Cryptographic verification core"
license = "Proprietary"
publish = false

[lib]
name = "morse_kirby_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
base64 = "0.21"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

# Encryption/Compression
aes-gcm = "0.10"
zstd = "0.13"
png = "0.17"
ureq = "2"

# System info
whoami = "1.4"

[dev-dependencies]
tempfile = "3"
proptest = "1"