[package]
name = "morse_kirby_core"
version = "1.2.0-mkpe"
edition = "2021"
authors = ["Morse-Kirby Provenance Engine"]
description = "Canonical Morse-Kirby Provenance Engine - Cryptographic verification core"
license = "Proprietary"
publish = false

[lib]
name = "morse_kirby_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
base64 = "0.21"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

# Encryption/Compression
aes-gcm = "0.10"
zstd = "0.13"
png = "0.17"
ureq = "2"

# System info
whoami = "1.4"

# Hardware key support
tss-esapi = { version = "7", optional = true }
challenge_response = { version = "0.5", optional = true }
zeroize = { version = "1", features = ["zeroize_derive"] }
hkdf = "0.12"

# Provenance: JSON Schema validation against schemas/provenance_v1.schema.json.
# Used to guarantee the producer never emits an attestation the verifier
# can't validate. Draft 2020-12 support is required; jsonschema 0.18+ has it.
jsonschema = { version = "0.18", default-features = false }

# Provenance: parse Cargo.lock to populate resolvedDependencies[].digest.sha256
# from the per-crate registry checksum. toml@0.8 has no_std-friendly parsing
# and adds minimal closure (cargo's own dep tree already transitively pulls it).
toml = { version = "0.8", default-features = false, features = ["parse"] }

[features]
default = ["tpm", "yubikey"]
tpm = ["tss-esapi"]
yubikey = ["challenge_response"]

[dev-dependencies]
tempfile = "3"
proptest = "1"
