[package]
name = "mkpe_service"
version = "1.0.0-mkpe"
edition = "2021"
authors = ["Morse-Kirby Provenance Engine"]
description = "MKPE background integrity verification service"

[[bin]]
name = "mkpe_service"
path = "src/main.rs"

[dependencies]
# Core MKPE
morse_kirby_core = { path = "../core" }

# Service framework
windows-service = "0.6"

# File system
walkdir = "2"
notify = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"

# IPC
interprocess = "1.2"
ctrlc = "3.4"

# Error handling
anyhow = "1"
thiserror = "1"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsvc", "winbase", "winerror"] }

