[package]
name = "mkpe_ui"
version = "1.0.0-mkpe"
edition = "2021"
authors = ["Morse-Kirby Provenance Engine"]
description = "MKPE tray UI and control panel"

[[bin]]
name = "mkpe_ui"
path = "src/main.rs"

[dependencies]
slint = "1.3"

# System tray
tray-icon = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File system
walkdir = "2"

# Utilities
chrono = "0.4"

# Error handling
anyhow = "1"

# Event loop
winit = "0.29"

[build-dependencies]
slint-build = "1.3"

