[package]
name = "mkpe_tray"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "mkpe_tray"
path = "src/main.rs"

[dependencies]
tray-icon = "0.14"
winit = { version = "0.29", features = ["rwh_05"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
image = "0.24"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Services",
]}

[build-dependencies]
winres = "0.1"

